--- a/leisure.html
+++ b/leisure.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Corporate Retreats | Palm Travel</title>
     <meta name="description" content="Executive retreats and corporate leisure packages for the maritime industry. Golf, team building, and business networking.">
+    <link rel="icon" type="image/jpeg" href="logo-palmtravel-new.jpg">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -28,7 +29,7 @@
         body { font-family: 'Inter', sans-serif; }
         .hero-gradient { background: linear-gradient(135deg, #1a7a6e 0%, #2d9b8a 100%); }
         .hero-bg {
-            background: linear-gradient(135deg, rgba(26, 122, 110, 0.92) 0%, rgba(45, 155, 138, 0.88) 100%),
+            background: linear-gradient(135deg, rgba(26, 122, 110, 0.85) 0%, rgba(45, 155, 138, 0.75) 100%),
                         url('https://images.unsplash.com/photo-1535131749006-b7f58c99034b?w=1920&q=80') center/cover no-repeat;
         }
         .pattern-dots {
