--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us | Palm Travel</title>
     <meta name="description" content="Learn about Palm Travel - Singapore's trusted marine travel partner since 1989. IATA accredited, NATAS member, STB licensed.">
+    <link rel="icon" type="image/jpeg" href="logo-palmtravel-new.jpg">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -28,8 +29,8 @@
         body { font-family: 'Inter', sans-serif; }
         .hero-gradient { background: linear-gradient(135deg, #1a7a6e 0%, #2d9b8a 100%); }
         .hero-bg {
-            background: linear-gradient(135deg, rgba(26, 122, 110, 0.92) 0%, rgba(45, 155, 138, 0.88) 100%),
-                        url('https://images.unsplash.com/photo-1578575437130-527eed3abbec?w=1920&q=80') center/cover no-repeat;
+            background: linear-gradient(135deg, rgba(26, 122, 110, 0.85) 0%, rgba(45, 155, 138, 0.75) 100%),
+                        url('https://images.unsplash.com/photo-1578575437130-527eed3abbec?w=1920&q=80') center /cover no-repeat;
         }
         .pattern-dots {
             background-image: radial-gradient(rgba(26, 122, 110, 0.07) 1px, transparent 1px);
