--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us | Palm Travel</title>
     <meta name="description" content="Get in touch with Palm Travel. Located at 15 Queen Street, Singapore. Call +65 6252 1788 or email contactus@palmtravel.com.sg">
+    <link rel="icon" type="image/jpeg" href="logo-palmtravel-new.jpg">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -28,7 +29,7 @@
         body { font-family: 'Inter', sans-serif; }
         .hero-gradient { background: linear-gradient(135deg, #1a7a6e 0%, #2d9b8a 100%); }
         .hero-bg {
-            background: linear-gradient(135deg, rgba(26, 122, 110, 0.92) 0%, rgba(45, 155, 138, 0.88) 100%),
+            background: linear-gradient(135deg, rgba(26, 122, 110, 0.85) 0%, rgba(45, 155, 138, 0.75) 100%),
                         url('https://images.unsplash.com/photo-1423666639041-f56000c27a9a?w=1920&q=80') center/cover no-repeat;
         }
         .pattern-dots {
