rearranged page flow

--- a/services.html
+++ b/services.html
@@ -99,12 +99,22 @@
     <!-- Marine Crew Travel -->
     <section class="py-12 sm:py-20">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <!-- Mobile: Title above image -->
+            <div class="lg:hidden mb-6">
+                <div class="inline-block bg-primary/10 text-primary px-3 py-1 rounded-full text-xs sm:text-sm font-medium mb-3 sm:mb-4">
+                    Core Service
+                </div>
+                <h2 class="text-2xl sm:text-3xl font-bold text-dark">Marine Crew Travel</h2>
+            </div>
             <div class="grid lg:grid-cols-2 gap-8 lg:gap-12 items-center">
                 <div>
-                    <div class="inline-block bg-primary/10 text-primary px-3 py-1 rounded-full text-xs sm:text-sm font-medium mb-3 sm:mb-4">
-                        Core Service
+                    <!-- Desktop: Title inline -->
+                    <div class="hidden lg:block">
+                        <div class="inline-block bg-primary/10 text-primary px-3 py-1 rounded-full text-xs sm:text-sm font-medium mb-3 sm:mb-4">
+                            Core Service
+                        </div>
+                        <h2 class="text-2xl sm:text-3xl font-bold text-dark mb-4 sm:mb-6">Marine Crew Travel</h2>
                     </div>
-                    <h2 class="text-2xl sm:text-3xl font-bold text-dark mb-4 sm:mb-6">Marine Crew Travel</h2>
                     <p class="text-gray-600 mb-6">
                         We specialize in arranging air transportation for seafarers and marine crew worldwide. With decades of experience in the maritime sector, we understand the complexities of crew rotations and vessel schedules.
                     </p>
@@ -150,7 +160,7 @@
                         Get a Quote
                     </a>
                 </div>
-                <div>
+                <div class="order-first lg:order-last">
                     <div class="rounded-2xl h-96 overflow-hidden relative">
                         <img src="images/marine-crew.jpg" alt="Marine Crew Travel" class="w-full h-full object-cover">
                         <div class="absolute inset-0 bg-gradient-to-br from-primary/10 to-secondary/5 pointer-events-none"></div>
@@ -163,18 +173,28 @@
     <!-- Corporate Travel -->
     <section class="py-20 bg-gray-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <!-- Mobile: Title above image -->
+            <div class="lg:hidden mb-6">
+                <div class="inline-block bg-primary/10 text-primary px-3 py-1 rounded-full text-sm font-medium mb-4">
+                    Corporate Solutions
+                </div>
+                <h2 class="text-3xl font-bold text-dark">Corporate Travel</h2>
+            </div>
             <div class="grid lg:grid-cols-2 gap-12 items-center">
-                <div class="order-2 lg:order-1">
+                <div class="order-first lg:order-first">
                     <div class="rounded-2xl h-96 overflow-hidden relative">
                         <img src="images/business-travel.jpg" alt="Corporate Business Travel" class="w-full h-full object-cover">
                         <div class="absolute inset-0 bg-gradient-to-br from-primary/10 to-secondary/5 pointer-events-none"></div>
                     </div>
                 </div>
                 <div class="order-1 lg:order-2">
-                    <div class="inline-block bg-primary/10 text-primary px-3 py-1 rounded-full text-sm font-medium mb-4">
-                        Corporate Solutions
+                    <!-- Desktop: Title inline -->
+                    <div class="hidden lg:block">
+                        <div class="inline-block bg-primary/10 text-primary px-3 py-1 rounded-full text-sm font-medium mb-4">
+                            Corporate Solutions
+                        </div>
+                        <h2 class="text-3xl font-bold text-dark mb-6">Corporate Travel</h2>
                     </div>
-                    <h2 class="text-3xl font-bold text-dark mb-6">Corporate Travel</h2>
                     <p class="text-gray-600 mb-6">
                         Executive travel and business bookings for maritime professionals. From shipyard visits to international conferences, we ensure your team travels efficiently.
                     </p>
@@ -218,12 +238,22 @@
     <!-- Visa Assistance -->
     <section class="py-20">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <!-- Mobile: Title above image -->
+            <div class="lg:hidden mb-6">
+                <div class="inline-block bg-primary/10 text-primary px-3 py-1 rounded-full text-sm font-medium mb-4">
+                    Additional Services
+                </div>
+                <h2 class="text-3xl font-bold text-dark">Visa Assistance</h2>
+            </div>
             <div class="grid lg:grid-cols-2 gap-12 items-center">
                 <div>
-                    <div class="inline-block bg-primary/10 text-primary px-3 py-1 rounded-full text-sm font-medium mb-4">
-                        Additional Services
+                    <!-- Desktop: Title inline -->
+                    <div class="hidden lg:block">
+                        <div class="inline-block bg-primary/10 text-primary px-3 py-1 rounded-full text-sm font-medium mb-4">
+                            Additional Services
+                        </div>
+                        <h2 class="text-3xl font-bold text-dark mb-6">Visa Assistance</h2>
                     </div>
-                    <h2 class="text-3xl font-bold text-dark mb-6">Visa Assistance</h2>
                     <p class="text-gray-600 mb-6">
                         Navigating visa requirements for seafarers can be complex. We provide guidance and assistance with visa applications for crew members traveling internationally.
                     </p>
@@ -263,7 +293,7 @@
                         Inquire About Visa Services
                     </a>
                 </div>
-                <div>
+                <div class="order-first lg:order-last">
                     <div class="rounded-2xl h-96 overflow-hidden relative">
                         <img src="images/visa-assistance.jpg" alt="Visa Assistance Services" class="w-full h-full object-cover">
                         <div class="absolute inset-0 bg-gradient-to-br from-primary/10 to-secondary/5 pointer-events-none"></div>
