--- a/index.html
+++ b/index.html
@@ -214,6 +214,12 @@
         </div>
     </section>
 
+    <!-- Oil Rig Banner -->
+    <section class="relative h-64 sm:h-80 lg:h-96 overflow-hidden">
+        <img src="images/oil-rig-index.jpg" alt="Offshore Oil Rig" class="w-full h-full object-cover">
+        <div class="absolute inset-0 bg-gradient-to-br from-primary/20 to-secondary/10"></div>
+    </section>
+
     <!-- Services Overview -->
     <section class="py-16 sm:py-24 pattern-dots">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
